--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -63,6 +63,7 @@ deploy-producao:
       NODE_ENV: production
       
     needs: [deploy-homologacao]
+    environment: producao
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
