--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -38,13 +39,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   
-  
   deploy-homologacao:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: production
       
-    needs: [build]
+    needs: [sonarcloud]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
